my-app/src/styles/GameHistoryItem.css
@import url("https://fonts.googleapis.com/css?family=Oswald");

.game-history-item {
    position: relative;
    display: inline-block;
    height: auto;
    font-family: Oswald, Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 400;
    border-style: none;
    border-radius: 10px;
    padding: 0.5vw;
}

.game-history-item.player-one {
    background-color: var(--primary-panel);
    box-shadow: var(--primary-panel-shadow) 0px 0px 5px 4px inset;
}

.game-history-item.player-two {
    background-color: var(--secondary-panel);
    box-shadow: var(--secondary-panel-shadow) 0px 0px 5px 4px inset;
}

.game-history-item .game-history-container {
    display: flex;
    vertical-align: middle;
    align-items: center;
    min-height: 125px;
}

.game-history-item .game-history-container .game-details,
.game-history-item .revealed-art {
    flex-grow: 1;
    flex-shrink: 1;
    transition: height 1s;
}

.game-history-item .revealed-art {
    height: 110px;
    border-radius: 10px;
    margin: 5px;
}

.game-history-item .revealed-art:hover {
    height: 200px;
}

.game-history-item .revealed-art-container {
    overflow: hidden;
    animation: 1s ease-in 0s 1 slide-out;
}

.game-history-item .game-details {
    display: flex;
    flex-direction: column;
    height: auto;
    width: 30vw;
    vertical-align: middle;
    margin: 1vw;
}

.game-history-item .game-counter {
    position: absolute;
    right: 10px;
}

.game-history-item .game-details .game-title {
    font-size: large;
    margin: 15px;
}

.game-history-item .revealed-tags {
    overflow: hidden;
    animation: 1s ease-in 0s 1 slide-down;
}

.game-history-item .revealed-tags .revealed-tag {
    font-size: small;
    display: inline-block;
    height: 20px;
    color: white;
    border-radius: 3px;
    margin: 1px;
    padding: 1px;
}

.game-history-item.player-one .revealed-tags .revealed-tag {
    background-color: var(--primary-tag);
}

.game-history-item.player-two .revealed-tags .revealed-tag {
    background-color: var(--secondary-tag);
}

.game-history-item .game-details .view-details-button {
    width: 100px;
    align-self: center;
}

.game-history-item.player-one .game-details .view-details-button:hover {
    color: var(--neutral-lightest);
}

.game-history-item.player-two .game-details .view-details-button:hover {
    color: var(--neutral-lightest);
}

@keyframes slide-out {
    0% {
        width: 0px;
    }
    100% {
        width: 245.344px;
    }
}

@keyframes slide-down {
    0% {
        height: 0px;
    }
    100% {
        height: 50px;
    }
}

